redirecting sites in new tab

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
       <section class="cards-wrapper">
         <div class="card-grid-space">
-          <a class="card" href="https://www.linkedin.com/in/pranav-jagtap-24pj/" style="--bg-img: url(./images/pranav.jpeg)">
+          <a class="card" href="https://www.linkedin.com/in/pranav-jagtap-24pj/" target="_blank" style="--bg-img: url(./images/pranav.jpeg)">
             <div>
               <h1>Pranav Jagtap</h1>
               <p>An Aspiring Data Scientist.</p>
@@ -29,7 +29,7 @@
         </div>
 
         <div class="card-grid-space">
-          <a class="card" href="https://www.linkedin.com/in/thange-preeti-88894b218/" style="--bg-img: url(./images/preeti.jpeg)">
+          <a class="card" href="https://www.linkedin.com/in/thange-preeti-88894b218/" target="_blank" style="--bg-img: url(./images/preeti.jpeg)">
             <div>
               <h1>Preeti Thange</h1>
               <p>A Tech Enthusiast.</p>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="card-grid-space">
-          <a class="card" href="https://www.linkedin.com/in/ram-agrawal123/" style="--bg-img: url(./images/ram.jpeg)">
+          <a class="card" href="https://www.linkedin.com/in/ram-agrawal123/" target="_blank" style="--bg-img: url(./images/ram.jpeg)">
             <div>
               <h1>Ram Agrawal</h1>
               <p>A Passionate problem solver.</p>
