Added fourth collaborator

--- a/about.html
+++ b/about.html
@@ -55,6 +55,20 @@
             </div>
           </a>
         </div>
+
+        <div class="card-grid-space">
+          <a class="card" href="https://www.linkedin.com/in/bhargavi-deshmukh-579139217/" target="_blank" style="--bg-img: url(./images/bhargavi.jpeg)">
+            <div>
+              <h1>Bhargavi Deshmukh</h1>
+              <p>Parbhani OP.</p>
+              <div class="tags">
+                <div class="tag">Java</div>
+                <div class="tag">Flutter</div>
+              </div>
+            </div>
+          </a>
+        </div>
+
       </section>
 
 </body>
