added mock exam feature

--- a/examselect.html
+++ b/examselect.html
@@ -3,7 +3,7 @@
         <title>Previous GATE Organizers</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./exam1.css">
+        <link rel="stylesheet" href="./examselect.css">
         <title>Solve GATE question paper</title>
     </head>
 
@@ -15,7 +15,7 @@
             <div class="box">
             <h2>Select which question paper you wish to solve</h2>
             <ul class="question-paper-list">
-                <li> <a href="#">GATE 2015 - Set 1</a></li>
+                <li> <a href="./2015-1/examstart.html">GATE 2015 - Set 1</a></li>
                 <li> <a href="#">GATE 2015 - Set 2</a></li>
                 <li> <a href="#">GATE 2015 - Set 3</a></li>
                 <li> <a href="#">GATE 2016 - Set 1</a></li>
@@ -23,7 +23,7 @@
                 <li> <a href="#">GATE 2017 - Set 1</a></li>
                 <li> <a href="#">GATE 2017 - Set 2</a></li>
                 <li> <a href="#">GATE 2018</a></li>
-                <li> <a href="#">GATE 2019</a></li>
+                <li> <a href="./2019/examstart.html">GATE 2019</a></li>
                 <li> <a href="#">GATE 2020</a></li>
                 <li> <a href="#">GATE 2021 - Set 1</a></li>
                 <li> <a href="#">GATE 2021 - Set 2</a></li>
