--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <nav class="navbar">
             <ul class="navbar-list">
-                <li><a class="navbar-links" href="./exam1.html">START SOLVING</a></li>
+                <li><a class="navbar-links" href="./examselect.html">START SOLVING</a></li>
                 <li><a class="navbar-links" href="https://gate.iitk.ac.in/" target="_blank">GATE 2023</a></li>
                 <li><a class="navbar-links" href="#CONTAINER-4">TOPICS</a></li>
                 <li><a class="navbar-links" href="./organizers.html">ORGANIZERS</a></li>
@@ -103,7 +103,7 @@
         <br>
         <p>We have put together all of the previous years GATE CSE question papers and created this website in such a way that you can solve the entire previous year exam papers with the correct marking scheme and time barrier. You can see how well you performed in the mock test attempt as your result will be displayed at the end of the exam.<br> Click the following button to select the desired question paper:- <br> </p>
         <br>
-        <a href="./exam1.html" class="container-5-button">Click Here...</a>
+        <a href="./examselect.html" class="container-5-button">Click Here...</a>
         <br>
     </section>
 
